# pokeapi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/pokeapi/: __init__.py  constants.py  exceptions.py
src/pokeapi/api_clients/: __init__.py  generation_client.py  pokemon_client.py
src/pokeapi/connection/: __init__.py  base.py  get.py
src/pokeapi/models/: __init__.py  api_resource.py  generation.py  pagination.py  pokemon.py
src/pokeapi/sdk/: __init__.py  pokeapi.py
tests/integration/: test_generation_client.py  test_pokeapi.py  test_pokemon_client.py
